--- a/index.html
+++ b/index.html
@@ -492,6 +492,19 @@
             border-radius: 50%;
             z-index: -5;
         }
+        /* 地面 */
+        .ground{
+            position: absolute;
+            margin: auto;
+            overflow: hidden;
+            bottom: 0px;
+            left: 0px;
+            width: 100%;
+            height: 40%;
+            background-color: #77C76E;
+            border-radius: 50% 50% 50% 50% / 3% 9% 0% 0%;
+            z-index: -6;
+        }
     </style>
 </head>
 <body>
@@ -554,6 +567,9 @@
         <div class="bottom_tail"></div>
         <!-- shadow -->
         <div class="shadow"></div>
+        <!-- ground -->
+        
     </div>
+    <div class="ground"></div>
 </body>
 </html>
